# ie-monorepo

./: .cursorrules  .dockerignore  .ebignore  Copy of KEEP 2025-2026 SciTech.xlsx  DEPLOYMENT.md  Docker-README.md  Dockerfile  Dockerfile.single-container  Dockerrun.aws.json  GITHUB_SECRETS_SETUP.md  Makefile  README-EB.md  cloud.logs  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.backup  eb-engine.logs  github-secrets.md  plain.txt  project-overview.txt  setup-env.sh  test-build.bat
.ebextensions/: 01-env.config  02_health.config  (+4 more)
ie_professors_database/: .dockerignore  .ebignore  .gitignore  Dockerfile  README.md  debug_django.py  entrypoint.sh  manage.py  pyproject.toml  pyvenv.cfg
ie_professors_database/.ebextensions/: 01_poetry.config  02_nginx_upload_size.config  django.config
ie_professors_database/.github/workflows/: ci-cd.yml
ie_professors_database/api/: health_views.py  serializers.py  tests.py  urls.py  views.py
ie_professors_database/config/settings/: production.py
ie_professors_database/general/: models.py
ie_professors_database/general/password_reset/: forms.py  views.py
ie_professors_database/ie_professor_management/: asgi.py  middleware.py  settings.py  test_settings.py  urls.py  wsgi.py
ie_professors_database/infra/: entrypoint.sh
ie_professors_database/static/pwa/: manifest.json  service_worker.js
ie_professors_database/templates/: base.html
ie_professors_database/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
ie_professors_database/university/: admin.py  apps.py  forms.py  models.py  translation.py
ie_professors_database/university/filters/: __init__.py  course_delivery_filters.py  missing_corporate_email.py  professor_is_null_filter.py  simple_active_filter.py  working_active_filter.py
ie_professors_database/university/forms/: __init__.py  intake_date_filter_form.py
ie_professors_database/university/inlines/: __init__.py  active_course_delivery_inline.py  course_delivery_inline.py
(+154 files in other folders)
