[tool.poetry]
name = "ie-professor-management"
version = "0.1.0"
description = ""
authors = ["Jose Antonio Garcia <email@example.com>"]
readme = "README.md"
packages = [{include = "ie_professor_management"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
django-unfold = "^0.60.0"
django-countries = "^7.6.1"
django-modeltranslation = "^0.19.15"
django-extensions = "^4.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
django-import-export = "^4.3.8"
django-simple-history = "^3.10.1"
django-timestampable = "^1.1.4"
djangorestframework = "^3.16.0"
django-filter = "^25.1"
django-cors-headers = "^4.7.0"
djangorestframework-simplejwt = "^5.5.1"
gunicorn = "^22.0.0"
dj-database-url = "^2.1.0"
whitenoise = "^6.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-django = "^4.5"
black = "^23.0"
isort = "^5.12"
flake8 = "^6.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"